--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./scripts/image_loader.js"></script>
     <title>rchetan.photo</title>
 </head>
 <body>
-    
+    <div id="image-display" class="image-wrapper">
+
+    </div>
 </body>
 </html>
