--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./scripts/image_loader.js"></script>
+    <link rel="stylesheet" href="style/style.css">
     <title>rchetan.photo</title>
 </head>
 <body>
-    <div id="image-display" class="image-wrapper">
-
+    <div id="image-display" class="masonry-layout">
     </div>
 </body>
 </html>
