added script to load folders

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>rchetan.photo</title>
 </head>
 <body>
-    <div id="image-display" class="masonry-layout">
+    <div id="main-menu">
+    </div>
+    <div id="gallery-display" class="masonry-layout">
     </div>
 </body>
 </html>
