add main menu select cover image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>rchetan.photo</title>
 </head>
 <body>
-    <div id="main-menu">
+    <div id="main-menu" class="main-menu">
     </div>
     <div id="gallery-display" class="masonry-layout">
     </div>
